# OBC-firmware

./: .README.md.swp  .clang-format  .clangd  .cproject  .gitignore  .pre-commit-config.yaml  .project  .tmux.conf  CMakeLists.txt  Dockerfile  Makefile  OBC-firmware\.env  README.md  RM46.ccxml  Soapy2.grc  Soapy3.grc  \  backup.txt  biome.json  cmock.mk  compile_commands.json  debugMsg1 (2).patch  demo_build.sh  deno.json  docker-compose.yaml  global_vars.mk  instructions.txt  main.c  other.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  rm46l852.ccxml  sdcFram_debugMsgs.patch  setup.cfg  setup.py  sources.mk  steps.txt  tmp  (+1 more)
fw/interfaces/obc_gs_interface/: CMakeLists.txt
fw/interfaces/test/: CMakeLists.txt
fw/obc/test/: CMakeLists.txt
fw/test/: CMakeLists.txt
fw/test/unit/: test_command_pack_unpack.cpp  test_pack_unpack_utils.cpp
gs/: CMakeLists.txt  Forwarding_USB_WSL.md  POSTGRESQL_SETUP.md  README.md  TEST_REPORT.md  analyze_duplicate_logic.py  bug_fix_demo.py  comms_pipeline_demo.c  cserialport_install.md  main.c  serial_communication_wsl.md  test_commands_curl.sh  test_commands_manual.py  test_commands_minimal.py  window.c  wsl.c
gs/backend/: CMakeLists.txt  POSTGRESQL_SETUP.md  cli.py  cli.tcss  comms_pipeline.py  comms_pipeline_demo.c  ground_station_cli.py  ground_station_shell.py  logs.txt  main.c  main.py  migrate.py  tmux_cli.py
gs/backend/api/: backend_setup.py  lifespan.py  setup.py
gs/backend/common/: logger.py
gs/backend/config/: config.py  config_models.py  cors_config.py  data_config.py  database_config.py  logger_config.py  template.env  utils.py
gs/backend/data/: aro_user.py  base_model.py
gs/backend/exceptions/: exception_handlers.py  (+1 more)
gs/bl/: bl_append_header.py
gs/common/: cserialport.cpp  gs_errors.h  gs_heap.c  gs_os_config.h  logger.py
gs/comms_state_machine/: ground_state_machine.c  ground_state_machine.h
gs/frontend/: deno.json  shared-types.ts
gs/frontend2/: deno.json
gs/gnu_radio/: hackRFCaptureDemod.grc
gs/hackRF/: hackRF_utils.h
gs/logger/: gs_logger.c
gs/positioning/: tle.py
gs/serial_utils/: win_uart.c  win_uart.h  wsl_uart.c  wsl_uart.h
gs/sun/: README.md  __init__.py  ephemeris.py  ephemerisparser.py  profile.prof
hal/: CMakeLists.txt  rm46_gcc_test.dil  rm46_gcc_test.hcg
hal/common/: os_atomic.h  os_required_fns.c
hal/include/: FreeRTOS.h  FreeRTOSConfig.h  MemMap.h  adc.h  can.h  ecap.h  errata_SSWF021_45_defs.h  esm.h  etpwm.h  gio.h  het.h  htu.h  hw_emac_ctrl.h  hw_reg_access.h  i2c.h  lin.h  os_croutine.h  os_task.h  os_timer.h  pinmux.h  pom.h  reg_crc.h  reg_eqep.h  reg_esm.h  reg_flash.h  reg_gio.h  reg_het.h  reg_htu.h  reg_i2c.h  reg_lin.h  reg_mibspi.h  reg_pbist.h  reg_pcr.h  reg_pinmux.h  reg_sci.h  reg_spi.h  reg_tcram.h  rti.h  sci.h  setup.h  (+13 more)
hal/launchpad/: rm46_launchpad_hal.dil  rm46_launchpad_hal.hcg
hal/obc_rev1/: obc_rev1_hal.dil  obc_rev1_hal.hcg
hal/obc_rev2/: obc_rev2_hal.hcg
hal/source/: adc.c  can.c  dabort.s  esm.c  gio.c  i2c.c  notification.c  os_croutine.c  os_event_groups.c  os_heap.c  os_list.c  os_mpu_wrappers.c  os_port.c  os_portasm.s  os_queue.c  os_required_fns.c  os_tasks.c  os_timer.c  pinmux.c  sci.c  spi.c  sys_calls.c  sys_dma.c  sys_intvecs.s  sys_link.ld  sys_main.c  sys_mpu.s  sys_pcr.c  sys_pmu.s  sys_selftest.c  sys_startup.c  sys_vim.c  system.c
hil/: CMakeLists.txt  bindings.cpp  hil_main.cpp  hil_main.py
hil/examples/: CMakeLists.txt  LogSink_Example.cpp  constants.py  logsinkExample.cpp  test_logsink.py
hil/i2c/: gpio_irq.c
hil/logsink/: CMakeLists.txt  logsink.cpp  logsink.h
hil/tests/: rm46.cpp
interfaces/: CMakeLists.txt  __init__.py  command_framing.py  main.c
interfaces/data_pack_unpack/: data_pack_utils.c  data_pack_utils.h  data_unpack_utils.c  data_unpack_utils.h
interfaces/logging/: logger.h  logging.h
interfaces/obc_gs_interface/: __init__.py
interfaces/wrappers/: obc_crc.py
libs/cserialport/: CMakeLists.txt
libs/libcorrect/: CMakeLists.txt  LICENSE.txt
libs/mbed/: CMakeLists.txt
obc/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  main.c
obc/app/: .cproject  .project  app_main.c  stack_check.c
obc/bl/: .cproject  .project  CMakeLists.txt  bl_append_header.py  bl_config.h  bl_flash.c  bl_flash.h  bl_main.c  flash_config.h
obc/build_examples/: CMakeCache.txt
obc/cmake/: download_arm_toolchain.cmake  toolchain_arm_none_eabi.cmake
obc/config/: CMakeLists.txt  obc_board_config.h  obc_scheduler_config.c  obc_scheduler_config.h  obc_task_config.h
obc/drivers/: CMakeLists.txt
obc/examples/: CMakeLists.txt
obc/hal/: CMakeLists.txt
obc/ld/: app_link.ld  bl_link.ld  memory.ld
obc/modules/: CMakeLists.txt
obc/reliance_edge/: CMakeLists.txt  README.md
obc/services/: obc_task_config.h
obc/sys/: CMakeLists.txt  obc_errors.h
python_test/: conftest.py  pyproject.toml  test_aes128.py  test_aro_data_wrapper.py  test_aro_requests_api.py  test_aro_user_api.py  test_ax25.py  test_bin_formatter.py  test_command_pack_unpack.py  test_config_manager.py  test_custom_exceptions.py  test_data_encode_decode.py  test_encode_decode_pipeline.py  test_ephemeris.py  test_ephemeris_parser.py  test_ephemerisparser.py  test_main_command_wrapper.py  test_mcc_command_endpoints.py  test_mcc_command_wrapper.py  test_retrieve_floating_commands.py  test_retrive_floating_commands.py  test_tle.py  test_user_api_endpoint.py
python_test/interface_wrapper_tests/: test_obc_gs_aes128.py  test_obc_gs_ax25.py  test_obc_gs_command_pack_unpack.py  test_obc_gs_commands_response_pack_unpack.py  test_obc_gs_fec.py  test_obc_gs_telemetry_pack_unpack.py
python_test/positioning/: test_sgp4_handler.py  test_tle.py
python_test/test_tables/: test_aro_user.py  test_main.py  test_transactional.py
test/: CMakeLists.txt  test_ax25.cpp  test_command_pack_unpack.cpp  test_pack_unpack.cpp  test_pack_unpack_utils.cpp
test/mocks/: mock_crc.c  mock_fram.c  mock_freertos.c  mock_heap.c  mock_i2c_hal.c  mock_i2c_hal.h  mock_logging.c  sys_common.h
test/test_bootloader/: CMakeLists.txt  test_checksum.cpp
(+2897 files in other folders)
