[build-system]
requires = ["setuptools>=59.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=gs --cov=obc/tools -v"
testpaths = ["python_test"]

[tool.mypy]
exclude = [
  "libs/*",
  "cmake/*",
  "build*",
  "python_test/*",
  "test/*"]
mypy_path = "gs:obc/tools"
strict = true

[tool.ruff]
include = ["pyproject.toml", "gs/**/*.py", "obc/tools/**/*.py"]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-annotations
    "ANN",
    # flake8 builtin shadowing
    "A",
]
ignore = ["ANN101", "ANN102"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
