[metadata]
name = OBC/GS
description = A package for the University of Waterloo Orbital Design Team's Ground Station and On-Board Computer
author = University of Waterloo Orbital Design Team
classifiers =
    Programming Language :: Python :: 3.10 :: Only

[options]
packages =
  sun
  python
install_requires =
    requests>=2.31
    pyserial>=3
python_requires = ==3.10
package_dir =
    gs
    obc/tools
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.4
    pytest-cov>=4.1
    mypy>=1.8
    flake8>=7.0
    # tox>=3.24

[options.package_data]
sun = py.typed
python = py.typed

[flake8]
max-line-length = 160
