[metadata]
name = OBC/GS
description = A package for the University of Waterloo Orbital Design Team's Ground Station and On-Board Computer
author = University of Waterloo Orbital Design Team
classifiers =
    Programming Language :: Python :: 3.11 :: Only

[options]
packages =
  gs/backend

# NOTE: The gs import is required for the CLI to be a stand-alone application
  gs
  obc
  interfaces
install_requires =
    requests>=2.31
    pyserial>=3
python_requires = ~=3.11
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.4
    pytest-cov>=4.1
    mypy>=1.8
    ruff>=0.2

# Mypy typed packages list
[options.package_data]
gs = py.typed
gs/backend = py.typed
obc/tools/python = py.typed
interfaces = py.typed
